Corrected API specs

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ JWT_SECRET=your_jwt_secret
 # Logging configuration
 LOG_LEVEL=info
 LOG_FILE_PATH=./logs/app.log
+
+# Server port (optional, defaults to 3000)
+# PORT=3000
