--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DB_USER=your_username
 DB_PASSWORD=your_password
 
 # JWT secret key
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=your.jwt.secret
 
 # Logging configuration
 LOG_LEVEL=info
