--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "ts-node src/app.ts",
 		"start:dev": "cross-env NODE_ENV=dev ts-node src/app.ts",
 		"build": "tsc",
-		"test": "mocha --parallel --require ts-node/register --extensions ts 'tests/**/*.test.ts'"
+		"test": "mocha --require ts-node/register --extensions ts 'tests/**/*.test.ts'"
 	},
 	"license": "MIT License",
 	"private": true,
@@ -25,14 +25,12 @@
 		"@types/express": "^4.17.17",
 		"@types/mocha": "^10.0.1",
 		"@types/node": "^18.15.11",
-		"@types/supertest": "^2.0.12",
 		"@typescript-eslint/eslint-plugin": "^5.58.0",
 		"@typescript-eslint/parser": "^5.58.0",
 		"chai": "^4.3.7",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.38.0",
 		"mocha": "^10.2.0",
-		"supertest": "^6.3.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.4"
 	}
